[project]
name = "riosca"
description = "Derivatives pricing library"
readme = "README.md"
license = {file = "LICENSE"}

authors = [
    {name = "Aiden Kenny", email = "akenny430@gmail.com"},
]
maintainers = [
    {name = "Aiden Kenny", email = "akenny430@gmail.com"},
]

dynamic = ["version"]

classifiers = [
    "Natural Language :: English",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
]
keywords = [
    "derivatives",
    "pricing",
    "risk",
    "quant",
]

requires-python = ">=3.9"
